--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "rehype-img-size": "^1.0.1",
     "rehype-slug": "^6.0.0",
+    "remix": "^2.9.2",
     "three": "^0.161.0",
     "three-stdlib": "^2.29.4"
   },
