--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build/client",
     "dev": "node ./scripts/dev.cjs && remix vite:dev",
     "build": "remix vite:build",
     "postinstall": "node ./scripts/draco.cjs",
