--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@remix-run/cloudflare": "^2.7.1",
     "@remix-run/cloudflare-pages": "^2.7.1",
     "@remix-run/react": "^2.7.1",
+    "cross-spawn": "^7.0.3",
     "framer-motion": "11.0.5",
     "fs-extra": "^11.2.0",
     "isbot": "^4.1.0",
@@ -30,7 +31,7 @@
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "rehype-img-size": "^1.0.1",
     "rehype-slug": "^6.0.0",
     "remix": "^2.9.2",
