--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^11.2.0",
     "isbot": "^4.1.0",
     "miniflare": "^3.20231030.4",
+    "netlify": "^13.1.20",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
