--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
     "@remix-run/cloudflare-pages": "^2.7.1",
     "@remix-run/react": "^2.7.1",
     "cross-spawn": "^7.0.3",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "11.0.5",
     "fs-extra": "^11.2.0",
     "isbot": "^4.1.0",
     "miniflare": "^3.20231030.4",
     "netlify": "^13.1.20",
     "nodemailer": "^6.9.13",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "rehype-img-size": "^1.0.1",
     "rehype-slug": "^6.0.0",
     "remix": "^2.9.2",
+    "stream-browserify": "^3.0.0",
     "three": "^0.161.0",
     "three-stdlib": "^2.29.4"
   },
